--- a/WebAppRest/src/main/webapp/index.html
+++ b/WebAppRest/src/main/webapp/index.html
@@ -7,10 +7,21 @@
 <link href="css/bootstrap-responsive.css" rel="stylesheet">
 <link href="css/datepicker.css" rel="stylesheet">
 <link href="css/bootstrap-overrides.css" rel="stylesheet">
+<link href="css/circular-carousel.css" rel="stylesheet">
+<link href="css/jquery.jscrollpane.css" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow&v1' 
+			rel='stylesheet' type='text/css' />
+<link href='http://fonts.googleapis.com/css?family=Coustard:900' 
+			rel='stylesheet' type='text/css' />
+<link href='http://fonts.googleapis.com/css?family=Rochester' 
+			rel='stylesheet' type='text/css' />
 <link rel="import" href="ajax/navbar.html">
 <script type="text/javascript" 
 	src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script type="text/javascript" src="js/gauge.js"></script>
+<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="js/jquery.mousewheel.js"></script>
+<script type="text/javascript" src="js/jquery.contentcarousel.js"></script>
 <script type="text/javascript" src="js/bootstrap.js"></script>
 <script type="text/javascript" src="js/bootstrap-datepicker.js"></script>
 <script type="text/javascript" src="js/json2.js"></script>
