fix recipes view

--- a/WebAppRest/src/main/webapp/ajax/navbar.html
+++ b/WebAppRest/src/main/webapp/ajax/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar navbar-inverse navbar-fixed-top" style="z-index: 99999;">
 			  <div class="navbar-inner">
 			  	<div class="container">
 			    	<a class="brand" href="#">Person Manager</a>
