fixed show person food template

--- a/WebAppRest/src/main/webapp/index.html
+++ b/WebAppRest/src/main/webapp/index.html
@@ -57,6 +57,15 @@
 		$.get("template/people-list-template.html",function(data) {
  			$(".container").append(data);
  		});	
+ 		$.get("template/show-person-food-template.html",function(data) {
+ 			$(".container").append(data);
+ 		});	
+ 		$.get("template/show-person-goal-template.html",function(data) {
+ 			$(".container").append(data);
+ 		});	
+ 		$.get("template/show-person-hp-template.html",function(data) {
+ 			$(".container").append(data);
+ 		});	
 	});
 </script>
 </head>
